--- a/samples/network-verifier/build.gradle
+++ b/samples/network-verifier/build.gradle
@@ -2,9 +2,18 @@ apply plugin: 'kotlin'
 apply plugin: 'net.corda.plugins.cordapp'
 apply plugin: 'net.corda.plugins.cordformation'
 
+cordapp {
+    info {
+        name "Corda Network Verifier"
+        vendor "R3"
+        targetPlatformVersion corda_platform_version.toInteger()
+        minimumPlatformVersion 1
+    }
+}
+
 dependencies {
-    cordaCompile project(':core')
-    cordaCompile project(':node-api')
+    runtimeOnly project(':node-api')
+    runtimeOnly "org.slf4j:slf4j-simple:$slf4j_version"
 
     // Corda integration dependencies
     cordaRuntime project(path: ":node:capsule", configuration: 'runtimeArtifacts')
@@ -23,7 +32,6 @@ task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar', nodeTask])
         cordapp project(':samples:network-verifier:contracts')
         cordapp project(':samples:network-verifier:workflows')
     }
-    directory "./build/nodes"
     node {
         name "O=Notary Service,L=Zurich,C=CH"
         notary = [validating : false]
