--- a/samples/simm-valuation-demo/build.gradle
+++ b/samples/simm-valuation-demo/build.gradle
@@ -62,6 +62,11 @@ dependencies {
     testCompile "org.assertj:assertj-core:$assertj_version"
 }
 
+jar {
+    // The Node configures the logging, not the CorDapp!
+    exclude "**/log4j2*.xml"
+}
+
 def nodeTask = tasks.getByPath(':node:capsule:assemble')
 def webTask = tasks.getByPath(':webserver:webcapsule:assemble')
 task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar', nodeTask, webTask]) {
