--- a/samples/trader-demo/build.gradle
+++ b/samples/trader-demo/build.gradle
@@ -1,29 +1,58 @@
 apply plugin: 'kotlin'
 apply plugin: 'idea'
 apply plugin: 'net.corda.plugins.quasar-utils'
+apply plugin: 'net.corda.plugins.cordapp'
 apply plugin: 'net.corda.plugins.cordformation'
+
+cordapp {
+    info {
+        name "Trader Demo"
+        vendor "R3"
+        targetPlatformVersion corda_platform_version.toInteger()
+        minimumPlatformVersion 1
+    }
+}
+
+sourceSets {
+    integrationTest {
+        kotlin {
+            compileClasspath += main.output + test.output
+            runtimeClasspath += main.output + test.output
+            srcDir file('src/integration-test/kotlin')
+        }
+    }
+}
+
+configurations {
+    integrationTestCompile.extendsFrom testCompile
+    integrationTestRuntime.extendsFrom testRuntime
+}
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    cordaCompile project(':samples:bank-of-corda-demo')
 
     // The trader demo CorDapp depends upon Cash CorDapp features
     cordapp project(':finance:contracts')
     cordapp project(':finance:workflows')
-    cordapp project(':samples:bank-of-corda-demo')
     cordapp project(':samples:trader-demo:workflows-trader')
 
     // Corda integration dependencies
     cordaRuntime project(path: ":node:capsule", configuration: 'runtimeArtifacts')
-    cordaRuntime project(path: ":webserver:webcapsule", configuration: 'runtimeArtifacts')
+    integrationTestCompileOnly project(":node")
 
     testCompile project(':test-utils')
     testCompile "junit:junit:$junit_version"
-    testCompile "org.assertj:assertj-core:${assertj_version}"
+    testCompile "org.assertj:assertj-core:$assertj_version"
+}
+
+task integrationTest(type: Test, dependsOn: []) {
+    testClassesDirs = sourceSets.integrationTest.output.classesDirs
+    classpath = sourceSets.integrationTest.runtimeClasspath
 }
 
 def nodeTask = tasks.getByPath(':node:capsule:assemble')
-def webTask = tasks.getByPath(':webserver:webcapsule:assemble')
-task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar', nodeTask, webTask]) {
+task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar', nodeTask]) {
     ext.rpcUsers = [['username': "demo", 'password': "demo", 'permissions': ["ALL"]]]
     nodeDefaults {
         projectCordapp {
@@ -33,7 +62,6 @@ task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar', nodeTask, 
         cordapp project(':finance:contracts')
         cordapp project(':samples:trader-demo:workflows-trader')
     }
-    directory "./build/nodes"
     node {
         name "O=Notary Service,L=Zurich,C=CH"
         notary = [validating : true]
@@ -96,15 +124,15 @@ idea {
     }
 }
 
-task runBank(type: JavaExec) {
-    classpath = sourceSets.main.runtimeClasspath
+task runBank(type: JavaExec, dependsOn: jar) {
+    classpath = sourceSets.test.runtimeClasspath
     main = 'net.corda.traderdemo.TraderDemoKt'
     args '--role'
     args 'BANK'
 }
 
-task runSeller(type: JavaExec) {
-    classpath = sourceSets.main.runtimeClasspath
+task runSeller(type: JavaExec, dependsOn: jar) {
+    classpath = sourceSets.test.runtimeClasspath
     main = 'net.corda.traderdemo.TraderDemoKt'
     args '--role'
     args 'SELLER'
