--- a/samples/network-verifier/build.gradle
+++ b/samples/network-verifier/build.gradle
@@ -12,7 +12,12 @@ cordapp {
 }
 
 dependencies {
+    // Cordformation needs this for the Network Bootstrapper.
     runtimeOnly project(':node-api')
+
+    // Cordformation needs a SLF4J implementation when executing the Network
+    // Bootstrapper, but Log4J doesn't shutdown completely from within Gradle.
+    // Use a much simpler SLF4J implementation here instead.
     runtimeOnly "org.slf4j:slf4j-simple:$slf4j_version"
 
     // Corda integration dependencies
