--- a/samples/simm-valuation-demo/build.gradle
+++ b/samples/simm-valuation-demo/build.gradle
@@ -63,7 +63,7 @@ dependencies {
 }
 
 jar {
-    // The Node configures the logging, not the CorDapp!
+    // A CorDapp does not configure the Node's logging!
     exclude "**/log4j2*.xml"
 }
 
