--- a/samples/trader-demo/build.gradle
+++ b/samples/trader-demo/build.gradle
@@ -32,6 +32,10 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     compile "net.sf.jopt-simple:jopt-simple:$jopt_simple_version"
     cordaCompile project(':client:rpc')
+
+    // Cordformation needs a SLF4J implementation when executing the Network
+    // Bootstrapper, but Log4J doesn't shutdown completely from within Gradle.
+    // Use a much simpler SLF4J implementation here instead.
     runtimeOnly "org.slf4j:slf4j-simple:$slf4j_version"
 
     // We only need this for its DUMMY_BANK constants, and
@@ -47,8 +51,9 @@ dependencies {
     cordaRuntime project(path: ":node:capsule", configuration: 'runtimeArtifacts')
 
     testCompile(project(':node-driver')) {
-        // Don't try to implement SLF4J with Log4J2 in any of the test classes
-        exclude group: 'org.apache.logging.log4j'
+        // We already have a SLF4J implementation on our runtime classpath,
+        // and we don't need another one.
+        exclude group: 'org.apache.logging.log4j', module: 'log4j-slf4j-impl'
     }
     testCompile "junit:junit:$junit_version"
     testCompile "org.assertj:assertj-core:$assertj_version"
